# MPI_CountingStars

./: .gitignore  CMakeLists.txt  image_processing.c  main.c
Tests/: extract_zf_test.c  main.c  png_manager_test.c  read_png.c  read_png_count_objects_test.c
docs/: report.tex
scripts/: local.tex  local2.tex  plot.py  results.txt  results_local.txt  time_analysis.py
src/: image_processing.c  image_processing.h  matrix.c  matrix.h  png_manager.c  png_manager.h
